# perfecto-mcp

./: .gitignore  Dockerfile  README.md  app.icns  build.py  main.py  pyproject.toml  server.py
.github/workflows/: build.yml  docker-build.yml
config/: perfecto.py  token.py  version.py
formatters/: device.py  grid.py  help.py  user.py
models/: device.py  grid.py  manager.py  result.py  user.py
tools/: ai_scriptless_manager.py  device_manager.py  execution_manager.py  help_manager.py  user_manager.py  utils.py
