[project]
name = "perfecto-mcp"
version = "0.1.0"
description = "MCP server for Perfecto Cloud Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.17.0",
    "pyinstaller>=6.0.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "lxml>=5.3.0",
]

[project.scripts]
perfecto-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "server"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tools", "config", "models", "formatters", "resources"]

[tool.setuptools.package-data]
"resources" = ["*.png"]
